--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -41,7 +41,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#FEFEFE"
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.cardview.widget.CardView
@@ -54,8 +53,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -65,12 +64,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/bikebtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/bike" />
+                    app:srcCompat="@drawable/bike"
+                    android:contentDescription="Bike"/>
 
                 <TextView
+                    android:id="@+id/cyclingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cycling"
@@ -89,8 +91,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -100,12 +102,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/foodbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/food" />
+                    app:srcCompat="@drawable/food"
+                    android:contentDescription="Eating"/>
 
                 <TextView
+                    android:id="@+id/eatingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Eating"
@@ -124,8 +129,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -135,12 +140,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/sleepbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/sleep" />
+                    app:srcCompat="@drawable/sleep"
+                    android:contentDescription="Sleep"/>
 
                 <TextView
+                    android:id="@+id/sleepingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sleeping"
@@ -159,8 +167,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -170,12 +178,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/readbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/read" />
+                    app:srcCompat="@drawable/read"
+                    android:contentDescription="Read Books"/>
 
                 <TextView
+                    android:id="@+id/readingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Reading"
@@ -194,8 +205,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -205,12 +216,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/watchbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/watch" />
+                    app:srcCompat="@drawable/watch"
+                    android:contentDescription="Watch Video"/>
 
                 <TextView
+                    android:id="@+id/watchingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Watching"
@@ -229,8 +243,8 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            app:cardCornerRadius="8dp"
             android:background="#FEFEFE"
+            app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -240,12 +254,15 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/gaming" />
+                <ImageButton
+                    android:id="@+id/gamingbtn"
+                    android:layout_width="66dp"
+                    android:layout_height="65dp"
+                    app:srcCompat="@drawable/gaming"
+                    android:contentDescription="Gaming"/>
 
                 <TextView
+                    android:id="@+id/gamingtextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Gaming"
@@ -296,8 +313,8 @@
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="42dp"
         android:layout_row="0"
         android:layout_column="2"
         android:layout_gravity="center"
