--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -60,20 +60,20 @@
             <EditText
                 android:id="@+id/dateview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight="1"
                 android:ems="10"
+                android:hint="Enter Date"
                 android:inputType="date"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:hint="Enter Date" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/timeview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="time"
